2006-03-08  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-edit.c
	* app/core/gimpchannel.c
	* app/core/gimpimage-contiguous-region.c
	* app/core/gimpimage-crop.c
	* app/core/gimppalette-import.c
	* app/tools/gimpbycolorselecttool.c
	* app/tools/gimpiscissorstool.c
	* tools/pdbgen/pdb/image.pdb: flush the projection before reading
	from it. Fixes bug #332933.

	* app/pdb/image_cmds.c: regenerated.

2006-03-06  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/display/gimpdisplay.c (gimp_display_reconnect): keep a
	reference on the old image until the display is connected to the
	new one. Fixes bug #333568.

	* app/display/gimpdisplay-handlers.c: fixed typo in comment.

2006-03-02  Sven Neumann  <sven.gimp.org>

	Merged from HEAD branch (bug #310426):

	* plug-ins/common/psd.c: fixed bug in resolution loading.

	* plug-ins/common/psd_save.c: save resolution in PSD file.

2006-02-28  Manish Singh  <yosh@gimp.org>

	Merged from HEAD branch:

	* app/base/cpu-accel.c
	* app/composite/gimp-composite-3dnow.h
	* app/composite/gimp-composite-mmx.h
	* app/composite/gimp-composite-sse.h
	* app/composite/gimp-composite-sse2.h: check for __PIC__ in addition
	to PIC.

2006-02-27  Sven Neumann  <sven@gimp.org>

	* data/images/gimp-splash.png: back to the original 2.2 splash.

2006-02-27  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/bmp/bmpwrite.c: properly round the resolution entry.
	Fixes bug #332501.

2006-02-22  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/vectors/gimpvectors-import.c: fix the import of svg circles.

2006-02-16  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/common/unsharp.c: applied patch from Stephane Chauveau
	that corrects the calculation of the tile cache size (bug #331344).

2006-02-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c (render_frame): applied patch
	from Michael Schumacher that fixes a potential crash in the
	plug-in (bug #328919).
