@@ -1,3 +1,10 @@
+2006-03-09  Sven Neumann  <sven@gimp.org>
+
+	Merged from HEAD branch:
+
+	* plug-ins/imagemap/imap_main.c (button_press): do not attempt to
+	use a NULL function pointer.
+
 2006-03-08  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimp-edit.c
